force-app/main/default/objects/nFORCE__Workflow__c/nFORCE__Workflow__c.object-meta.xml
<CustomObject>
    <description>This object defines the workflow that the system runs to orchestrate business activities. This process may consist of one or more steps that the user or system runs to complete a business process.</description>
    <label>Workflow</label>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>