force-app/main/default/objects/nFORCE__Workflow__c/fields/nFORCE__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__lookupKey__c</fullName>
    <description>The system automatically generates this number field with the External ID for the workflow object.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the External ID for the associated workflow.</inlineHelpText>
    <label>Lookup Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>