force-app/main/default/objects/nFORCE__Workflow__c/fields/nFORCE__Orchestration_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Orchestration_Type__c</fullName>
    <description>The user manually populates this picklist field to indicate how the steps run in the workflow. Some possible options include Single Transaction, Multiple Transactions (Queued), and Multiple Transactions (UI Orchestrated).</description>
    <inlineHelpText>Select the desired orchestration type for your workflow.</inlineHelpText>
    <label>Orchestration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nFORCE.WorkflowPerExeContextOrchestrator</fullName>
                <label>Single Transaction</label>
            </value>
            <value>
                <fullName>nFORCE.StepPerQueueJobOrchestrator</fullName>
                <label>Multiple Transactions (Queued)</label>
            </value>
            <value>
                <fullName>nFORCE.StepPerExeContextOrchestrator</fullName>
                <label>Multiple Transactions (UI Orchestrated)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>