force-app/main/default/objects/nFORCE__Workflow__c/listViews/nFORCE__All_Workflows.listView-meta.xml
<ListView>
    <fullName>nFORCE__All_Workflows</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Key__c</columns>
    <columns>nFORCE__Orchestration_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Workflows</label>
</ListView>